# GiGL

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASING.md  SECURITY.md  build_cpp_extensions.py  conf.py  dep_vars.env  exploit_payload.py  index.rst  install.sh  mypy.ini  parse.py  pyproject.toml  setup.py  test.py
.claude/: development.md  formatting.md
.claude/commands/: codex-verify.md
.cursor/: README.md
.cursor/rules/: coding.mdc  python-patterns.mdc  testing-patterns.mdc
.github/cloud_builder/: run_command_on_active_checkout.yaml
.github/scripts/: get_help_text.py  update_docker_image_refs.sh
.github/workflows/: api_test.yml  build-base-docker-images.yml  create_release.yml  fossa-analyze.yml  generate-hashed-requirements.yml  integration-tests.yml  nightly_release_&_test.yml  on-pr-comment.yml  on-pr-merge.yml  release-documentation.yml  release-whl.yml  release.yml
containers/: Dockerfile.builder  Dockerfile.cpu.base  Dockerfile.cuda.base  Dockerfile.customer_src  Dockerfile.dataflow.base  Dockerfile.dataflow.src  Dockerfile.dev_container  Dockerfile.dev_workbench_container  Dockerfile.gigl_workbench_container  Dockerfile.src  docker_entrypoint.sh  gigl_workbench_startup_script.sh
deployment/configs/: e2e_cicd_resource_config.yaml  e2e_glt_gs_resource_config.yaml  e2e_glt_gs_train_resource_config.yaml  e2e_glt_resource_config.yaml  unittest_resource_config.yaml
docs/: 20260331-shared-sampling-backend.md  cpp_style_guide.md
docs/api/: index.rst
docs/api_reference/: index.rst
docs/plans/: 20260406-shared-backend-pr-decomposition.md  20260406-shared-backend-pr-restructure.md  20260415-bq-data-analyzer-references.md  20260415-bq-data-analyzer.md  20260416-data-analyzer-1-pager.md  20260416-data-analyzer-engineering-spec.md  20260429-add-env-var-injection-to-kfp-runner.md  20260505-tb-multi-job-iteration.md  20260506-drop-submit-tensorboard.md
docs/user_guide/: index.rst
e2e_tests/: notebooks_test.py
examples/: __init__.py  diagnostic_vertex_ai_job.py  models.py
examples/MAG240M/: README.md  __init__.py  fetch_data.ipynb  mag240m.ipynb  mag240m_in_memory.ipynb  mag240m_tabularized.ipynb  preprocessor_config.py  preprocessor_config_heterogeneous.py  queries.py  resource_config.yaml  resource_config_heterogeneous.yaml  resource_config_in_memory.yaml  task_config.yaml  task_config_heterogeneous.yaml  task_config_in_memory.yaml
examples/distributed/: .gitignore  README.md  cora.ipynb  heterogeneous_inference.py  heterogeneous_training.py  homogeneous_inference.py  homogeneous_training.py
examples/id_embeddings/: gowalla_data_preprocessor_config.py  heterogeneous_training.py  homogeneous_training.py
examples/link_prediction/: README.md  __init__.py  cora.ipynb  dblp.ipynb  heterogeneous_inference.py  heterogeneous_training.py  homogeneous_inference.py  homogeneous_training.py  models.py
examples/node_classification/: README.md  __init__.py  homogeneous_inference.py  homogeneous_training.py  models.py
examples/server_client/: client.py  same_machine.py  server.py
examples/toy_visual_example/: README.md  graph_config.yaml  resource_config.yaml  task_config.yaml  template_task_config.yaml  toy_data_preprocessor_config.py  toy_example_walkthrough.ipynb  visualize.py
gh_pages_source/_static/: custom.css
gh_pages_source/_templates/: class.rst  module.rst
gigl/: __init__.py  cpp_build_constants.py  dep_vars.env
gigl-core/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  Makefile  README.md  pyproject.toml
gigl-core/core/collation/: collate_core.cpp  collate_core.h  python_collate_core.cpp
gigl-core/core/sampling/: ppr_forward_push.cpp  ppr_forward_push.h  python_ppr_forward_push.cpp
gigl-core/csrc/sampling/: ppr_forward_push.cpp  ppr_forward_push.h
gigl-core/requirements/: install_cpp_deps.sh
gigl-core/scripts/: run_cpp_lint.py
gigl-core/src/: add_one.cpp  add_one.h  python_add_one.cpp
gigl-core/src/gigl_core/: __init__.py  _core.pyi  collate_core.pyi  ppr_forward_push.pyi  py.typed
gigl-core/tests/: CMakeLists.txt  collate_core_test.cpp  infrastructure_test.cpp  ppr_forward_push_test.cpp
gigl/analytics/: README.md  SPEC.md  _inspect_impl_ai.py  inspect.py
gigl/common/: constants.py  logger.py  omegaconf_resolvers.py
gigl/csrc/: cpp_compile_constants.py
gigl/distributed/: __init__.py  _collate_dispatch.py  base_dist_loader.py  base_sampler.py  benchmark.py  dataset_factory.py  dist_ablp_neighborloader.py  dist_dataset.py  dist_neighbor_sampler.py  dist_partitioner.py  dist_ppr_sampler.py  dist_range_partitioner.py  dist_sampling_producer.py  dist_server.py  distributed_neighborloader.py  sampler.py  (+3 more)
python/: pyproject.toml  setup.py
requirements/: darwin_arm64_requirements_unified.txt  dev_darwin_arm64_requirements_unified.txt  dev_linux_cpu_requirements_unified.txt  dev_linux_cuda_requirements_unified.txt  experimental_linux_cpu_requirements_unified.txt  experimental_linux_cuda_requirements_unified.txt  install_cpp_deps.sh  install_deps.sh  install_py_deps.sh  install_scala_deps.sh  linux_cpu_requirements_unified.txt  linux_cuda_requirements_unified.txt
scala/: Makefile  README.md  build.sbt  repositories
scala_spark35/: .gitignore  .scalafix.conf  Makefile  README.md  build.sbt
scripts/: __init__.py  _cpp_config.py  assert_yaml_configs_parse.py  bootstrap_resource_config.py  build_and_push_docker_image.py  build_cpp_extensions.py  bump_version.py  cpp_build_constants.py  create_dev_instance.py  generate_compile_commands.py  launch_graph_store_local.py  release.py  run_cpp_lint.py  scala_packager.py  setup_environment.sh  setup_gcp_project.sh  setup_project.sh  startup_dev_instance.sh  versioning_and_release.py
snapchat/: __init__.py
testing/: README.md  assert_yaml_configs_parse.py  dep_vars_check.py  notebooks_test.py
tests/: notebooks_test.py
tests/unit/cpp/: CMakeLists.txt  infrastructure_test.cpp
(+1143 files in other folders)
