[project]
name            = "gigl-core"
description     = "GiGL C++/CUDA kernels (pybind11 extensions)"
readme          = "README.md"
version         = "0.2.0"
requires-python = "==3.11.*"
# Torch is resolved from the ambient environment. gigl-core wheels are ABI-bound
# to the torch variant they were built against (cpu or cu128). The parent `gigl`
# extras (pyg27-torch28-cpu / pyg27-torch28-cu128) already pin torch==2.8, and
# pip picks the matching gigl-core wheel from whichever GCP registry the user
# configured for gigl. Same pattern as PyG's pyg_lib.
dependencies = []

[build-system]
requires      = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.18"
build-dir     = "build/{wheel_tag}"
# Default editable mode is `redirect`: scikit-build-core writes the compiled .so
# into build/{wheel_tag}/ and installs an import-hook shim into site-packages
# that resolves `gigl_core._core` to that path. Plays correctly with src layouts
# where `inplace` mode would mis-place the .so at the project root. `editable.rebuild`
# stays off so imports never block on CMake — explicit `uv sync` or `uv pip install
# -e .` drives rebuilds.
editable.rebuild = false
# Always emit compile_commands.json into the scikit-build-core build dir so
# clang-tidy reads it directly — no custom wrapper script required.
cmake.define.CMAKE_EXPORT_COMPILE_COMMANDS = "ON"

[tool.uv]
# Invalidate the uv build cache when any of these inputs change. Without this,
# editing a .cpp file in src/ would not trigger a rebuild on `uv sync`.
cache-keys = [
    { file = "pyproject.toml" },
    { file = "CMakeLists.txt" },
    { file = "src/**/*.{h,cpp,cu,cuh}" },
]
